<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FreeRoomFinder</string>
    <string name="action_settings">Settings</string>
    <string name="submit_button">Submit</string>
    <string name="password_reset">Reset</string>
    <string name="register_account">Register</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="title_activity_login">Sign in</string>
    <string name="login_heading">Sign in</string>
    <string name="error_invalid_account">Invalid Account</string>
    <string name="action_forgot_password">Recover lost password</string>
    <string name="login_progress_signing_in">Signing in&#8230;</string>
    <string name="error_invalid_password">Specified password is too short</string>
    <string name="error_incorrect_password">Specified password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="password_error">Invalid Password</string>
    <string name="username_error">Invalid Username</string>
    <string name="username_password_error">Invalid username or password</string>
    <string name="time_heading">Time</string>
    <string name="duration_heading">Duration</string>
    <string name="date_heading">Date</string>
    <string name="campus_heading">Campus</string>
    
    <string name="reset_site">https://www.cs-club.ca/reset/</string>
    <string name="register_site">https://www.cs-club.ca/register/</string>
    
    <string-array name="campus_names">
        <item>North Oshawa Campus</item>
        <item>Downtown Oshawa Campus</item>
        <item>Campus-Georgian Campus</item>
    </string-array>
    
    <string-array name="duration_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    
    <string-array name="campus_index">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string name="time_prompt">Start Time</string>

    <string-array name="army_time_values">
        <item>08:00</item>
        <item>09:00</item>
        <item>10:00</item>
        <item>11:00</item>
        <item>12:00</item>
        <item>13:00</item>
        <item>14:00</item>
        <item>15:00</item>
        <item>16:00</item>
        <item>17:00</item>
        <item>18:00</item>
        <item>19:00</item>
        <item>20:00</item>
    </string-array>
    
    <string-array name="time_values">
        <item>8:00 AM</item>
        <item>9:00 AM</item>
        <item>10:00 AM</item>
        <item>11:00 AM</item>
        <item>12:00 PM</item>
        <item>1:00 PM</item>
        <item>2:00 PM</item>
        <item>3:00 PM</item>
        <item>4:00 PM</item>
        <item>5:00 PM</item>
        <item>6:00 PM</item>
        <item>7:00 PM</item>
        <item>8:00 PM</item>
    </string-array>

    <string name="search_button">Search</string>
    <string name="hours_label">Hours</string>
    <string name="title_activity_main">Free Room Finder</string>
    <string name="title_section1">Search</string>
    <string name="title_section2">Results</string>
    <string name="title_section3">Bookings</string>
    <string name="room_title">Room</string>
    <string name="start_time_title">Start</string>
    <string name="end_time_title">End</string>
    <string name="book_button_title">Book</string>
    <string name="date_picker_title">Pick Date</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    
    <!-- Settings -->
    	<!-- General -->
    <string name="are_you_sure">Are you sure you want to delete your account?</string>
    <string name="delete_account_title">Delete Account</string>
	<string name="delete_account_summary">Delete your FRF account</string>
	<string name="maximum_rooms_title">Bookings List</string>
	<string name="maximum_rooms_summary">Select number of bookings to keep saved</string>
	
		<!-- Search -->
	<string name="army_clock_title">Clock Settings</string>
	<string name="army_clock_summary_on">Use 12 hour clock (using 12 hour clock)</string>
	<string name="army_clock_summary_off">Use 12 hour clock (using 24 hour clock)</string>
	<string name="default_campus_title">Default Campus</string>
	<string name="default_campus_summary">Select the default campus to search in</string>
	<string name="default_duration_title">Default Duration</string>
	<string name="default_duration_summary">Select the default booking duration</string>
	
		<!-- Feedback -->
	<string name="bugsense_title">BugSense</string>
	<string name="busense_summary_on">Bug Reporting is enabled</string>
	<string name="busense_summary_off">Bug Reporting is disabled</string>
	<string name="get_source_title">Get Source Code</string>
	<string name="get_source_summary">Contribute to Free Room Finder</string>
	<string name="contact_title">Contact</string>
	<string name="contact_summary">Contact the Developers</string>
	
	<string name="source_code_site">https://github.com/gnu-user/free-room-website</string>

    <string-array name="dev_emails">
       <item>joseph.heron@uoit.net</item>
       <item>jonathan.gillett@uoit.net</item>
       <item>daniel.smullen@uoit.net</item>
    </string-array>

	<string name="share_title">Share</string>
	<string name="delete_title">Delete</string>
	
	<string name="send_booking_starting">Hey, I booked a room for us! Check it out,</string>
	<string name="send_booking_room">Meet me in this room:</string>
	<string name="send_booking_start">At this time:</string>
	<string name="send_booking_end">We will go home at:</string>
	<string name="send_booking_date">On: </string>
	<string name="send_booking_ending">See you there!</string>
	
</resources>