<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <!-- SECTION SEARCH SETTINGS -->    
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="army_clock"
        android:summaryOff="@string/army_clock_summary_off"
        android:summaryOn="@string/army_clock_summary_on"
        android:title="@string/army_clock_title" />
    
    <!-- TODO Set Campus default preference -->
    <ListPreference
        android:dialogTitle="@string/default_campus_title"
        android:key="default_campus"
        android:summary="@string/default_campus_summary"
        android:title="@string/default_campus_title"
        android:positiveButtonText="@android:string/yes"
        android:negativeButtonText="@android:string/no"
        android:entries="@array/campus_names"
        android:entryValues="@array/campus_index"
        android:defaultValue="1"/>
     
     <!-- TODO Set duration default preference -->
     <ListPreference 
        android:dialogTitle="@string/default_duration_title"
        android:key="default_duration"
        android:summary="@string/default_duration_summary"
        android:title="@string/default_duration_title"
        android:positiveButtonText="@android:string/yes"
        android:negativeButtonText="@android:string/no"
        android:entries="@array/duration_values"
        android:entryValues="@array/duration_values"
        android:defaultValue="1"/> 

</PreferenceScreen>
