<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <!-- SECTION Feedback -->
    <!-- TODO Enable Bugsense -->   
    <CheckBoxPreference
        android:key="enable_bugsense"
        android:title="@string/bugsense_title"
        android:summaryOn="@string/busense_summary_on"
        android:summaryOff="@string/busense_summary_off"
        android:defaultValue="true"/>
    
    <!-- TODO Get source code -->
    <Preference
        android:title="@string/get_source_title"
        android:summary="@string/get_source_summary"
        android:key="source_code">
    </Preference>
    
	<!-- TODO Donate -->
    <Preference
		android:title="@string/donate_title"
        android:summary="@string/donate_summary"
        android:key="donate">
    </Preference>
    

</PreferenceScreen>
