<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RoomsBooked" >

    <ScrollView
        android:id="@+id/ScrollView01"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >
        
        <TableLayout
            android:id="@+id/TableLayout1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:divider="@color/MidnightBlue"
            android:orientation="horizontal"
            android:showDividers="middle|beginning" >

            <TableRow
                android:id="@+id/header_header"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/room_number"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingRight="@dimen/table_horizontal_margin"
                    android:text="@string/room_title"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/stime"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="@dimen/table_horizontal_margin"
                    android:paddingRight="@dimen/table_horizontal_margin"
                    android:text="@string/start_time_title"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/etime"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="@dimen/table_horizontal_margin"
                    android:paddingRight="@dimen/table_horizontal_margin"
                    android:text="@string/end_time_title"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/table_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="@dimen/table_horizontal_margin"
                    android:paddingRight="@dimen/table_horizontal_margin"
                    android:text="@string/date_heading"
                    android:textAppearance="?android:attr/textAppearanceLarge" />
            </TableRow>
        </TableLayout>
        
        </ScrollView>

</FrameLayout>
