<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/result_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
	android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Results" >

    <TableLayout
        android:id="@+id/TableLayout1"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:divider="@color/MidnightBlue"
    	android:showDividers="middle|beginning|end" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/room_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/room_title"
            android:layout_weight="1"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/stime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:layout_weight="1"
            android:text="@string/start_time_title"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/etime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:layout_weight="1"
            android:text="@string/end_time_title"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:layout_weight="1"
            android:text=" "
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </TableRow>
    
    </TableLayout>

</FrameLayout>
